--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -1,10 +1,3 @@
-/*
-
-Tooplate 2115 Marvel
-
-https://www.tooplate.com/view/2115-marvel
-
-*/
 
 @import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Poppins:wght@300&display=swap');
 
@@ -294,7 +287,8 @@ b, strong {
   background: #0c0c0d;
 }
 .dark-mode .navbar-light .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.8);
+  /* color: rgba(255, 255, 255, 0.8); */
+  color: #ac9b50;
 }
 .dark-mode .navbar-light .navbar-nav .nav-link:hover {
   color: #ffc200;
@@ -309,10 +303,12 @@ b, strong {
 }
 .dark-mode .feature-card .uil,
 .dark-mode .navbar-light .navbar-brand,
-.dark-mode h1, .dark-mode h2, .dark-mode h3, .dark-mode h4, .dark-mode h5, .dark-mode h6,
-.dark-mode .color-mode {
+.dark-mode h1, .dark-mode h2, .dark-mode h3, .dark-mode h4, .dark-mode h5, .dark-mode h6{
   color: #ffffff;
 }
+.dark-mode .color-mode{
+  color: #000000;
+} 
 .dark-mode .owl-carousel .owl-nav button.owl-next,
 .dark-mode .owl-carousel .owl-nav button.owl-prev,
 .dark-mode .owl-carousel button.owl-dot {
@@ -478,7 +474,7 @@ b, strong {
   }
 
   .color-mode {
-    display: none;
+    /* display: none; */
   }
 
   .about-image {
@@ -671,7 +667,7 @@ b, strong {
     height: auto;
   }
   .heading{
-    padding-left: 170px;
+    padding-left: 120px;
     padding-top: 30px;
     font-size: 25px;
   }
