--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -662,12 +662,12 @@ b, strong {
   transform: translateX(5px);
 }
 /* aboutA media queries starts*/
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 580px) {
   .aboutA{
     height: auto;
   }
   .heading{
-    padding-left: 120px;
+    padding-left: 65px;
     padding-top: 30px;
     font-size: 25px;
   }
@@ -691,6 +691,18 @@ b, strong {
   }
   .aboutA .row .content .box-container {
     gap: 0;
+  }
+}
+@media screen and(max-width: 320px){
+  .heading{
+    padding-left: 35px;
+    padding-top: 30px;
+    font-size: 22px;
+  }
+  .aboutA .row .image img {
+    margin-left: 30px;
+    width: 60%;
+    mix-blend-mode: normal;
   }
 }
 /* aboutA media queries ends*/
