--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -539,6 +539,10 @@ b, strong {
     display: block;
     margin: 10px 0 0 0;
   }
+  .contact-info p, .contact-info a{
+    font-size: 15px;
+    color: wheat;
+  }
 }
 @media (max-width: 320px) {
   .animated-text {
@@ -559,12 +563,13 @@ b, strong {
 
   .contact-info {
     flex-direction: column;
-  }
+    
+  } 
 
   .social-links li {
     display: inline-block;
     vertical-align: top;
-    padding: 10px;
+    /* padding: 10px; */
   }
 }
 
